--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.17.1",
     "jest": "^27.4.3",
     "mongoose": "^6.0.15",
-    "supertest": "^6.1.6"
+    "supertest": "^6.1.6",
+    "swagger-ui-express": "^4.2.0"
   }
 }
